fix extra margin and padding of body

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,13 +5,13 @@
   min-height: 100vh;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
 #root {
-  max-width: 100%;
-  position: relative;
-  top: -8px;
-  left: -8px;
-  margin: 0 auto;
-  text-align: center;
+  max-width: 100%; /*does not include the v-scroll*/
   background-color: rgb(168, 168, 168);
 }
 
